--- a/Public/index.html
+++ b/Public/index.html
@@ -666,7 +666,7 @@
     #top-menu li a, .et_search_form_container input {
         font-weight: normal;
         font-style: normal;
-        text-transform: uppercase;
+        /*text-transform: uppercase;*/
         text-decoration: none
     }
 
@@ -1188,14 +1188,14 @@
                             style="padding: 10px; border: 1px solid rgba(255, 255, 255, 0.3); border-radius: 5px;">
                             <a style="padding-bottom: 0;">{{curLang}}</a>
                             <ul class="sub-menu sub-menu-normal" style="margin-top: 20px; ">
-                                <li v-if="curLang == 'EN'" class="menu-item menu-item-type-custom menu-item-object-custom sub-menu-selected"><a
-                                        style="color: #1D5DFF !important;" @click="toggleLang('en')">EN</a></li>
+                                <li v-if="curLang == 'English'" class="menu-item menu-item-type-custom menu-item-object-custom sub-menu-selected"><a
+                                        style="color: #1D5DFF !important;" @click="toggleLang('English')">English</a></li>
                                 <li v-else class="menu-item menu-item-type-custom menu-item-object-custom"><a
-                                        @click="toggleLang('en')">EN</a></li>
-                                <li v-if="curLang == 'CN'" class="menu-item menu-item-type-custom menu-item-object-custom sub-menu-selected"><a
-                                        style="color: #1D5DFF !important;" @click="toggleLang('cn')">CN</a></li>
+                                        @click="toggleLang('English')">English</a></li>
+                                <li v-if="curLang == '中文'" class="menu-item menu-item-type-custom menu-item-object-custom sub-menu-selected"><a
+                                        style="color: #1D5DFF !important;" @click="toggleLang('中文')">中文</a></li>
                                 <li v-else class="menu-item menu-item-type-custom menu-item-object-custom"><a
-                                        @click="toggleLang('cn')">CN</a></li>
+                                        @click="toggleLang('中文')">中文</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -1559,8 +1559,8 @@
                                                         </br>
                                                     </p>
                                                     <span style="font-weight: 400;">
-                                                         {{$t('Sector recovery Details 3')}}<a
-                                                            style="font-weight: bold; color: #666666"
+                                                         {{$t('Sector recovery Details 3')}}&nbsp;<a
+                                                            style="font-weight: bold;"
                                                             href="https://github.com/Filecoin-project/community/discussions/407"
                                                             target="_blank">{{$t('Sector recovery Details 4')}}</a>{{$t('Sector recovery Details 5')}}
                                                     </span>
@@ -1629,7 +1629,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_4  et_pb_text_align_center et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4 style="word-break: break-all; margin: 0px 15px;">
-                                                        {{$t('Use computing power in the cloud Details 3')}}</h4>
+                                                        <a style="color: #2ea3f2" href="https://github.com/froghub-io" target="_blank">{{$t('Use computing power in the cloud Details 3')}}</a></h4>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
@@ -1643,7 +1643,7 @@
                                                     <h4><span
                                                             class="blob-code-inner blob-code-marker"
                                                             data-code-marker="+"
-                                                            style="color: #1D5CFF; font-weight: 400">{{$t('Learn more about Cloud C2')}} ➞</span>
+                                                            style="color: #2ea3f2; font-weight: 400">{{$t('Learn more about Cloud C2')}} ➞</span>
                                                     </h4>
                                                 </a></div>
                                             </div> <!-- .et_pb_text -->
@@ -1982,8 +1982,9 @@
     (function ($) {
         jq = $;
     })(jQuery);
-    let initCurLang = 'EN';
-    if (window.localStorage.getItem("curLang") == 'EN' || window.localStorage.getItem("curLang") == 'CN') {
+    let supportLanguage = {'English': 'en', '中文': 'cn',}
+    let initCurLang = 'English';
+    if (window.localStorage.getItem("curLang") == 'English' || window.localStorage.getItem("curLang") == '中文') {
         initCurLang = window.localStorage.getItem("curLang")
     }
     new Vue({
@@ -1994,7 +1995,7 @@
             submitClick: true
         },
         i18n: new VueI18n({
-            locale: initCurLang.toLocaleLowerCase(),
+            locale: supportLanguage[initCurLang],
             messages: language
         }),
         mounted() {
@@ -2005,8 +2006,8 @@
         },
         methods: {
             toggleLang(lang) {
-                this.curLang = lang.toUpperCase()
-                this.$i18n.locale = lang
+                this.curLang = lang
+                this.$i18n.locale = supportLanguage[lang]
                 window.localStorage.setItem('curLang', this.curLang)
             },
             setup_collapsible_submenus() {
@@ -2030,8 +2031,8 @@
                         }
                         jq(this).on('click', function (_) {
                             let lang = jq(this)[0].text
-                            if (lang == 'EN' || lang == 'CN') {
-                                that.toggleLang(lang.toLocaleLowerCase())
+                            if (lang == 'English' || lang == '中文') {
+                                that.toggleLang(lang)
                                 that.setup_collapsible_submenus()
                             }
                             that.hiddenMenu()
