--- a/Public/index.html
+++ b/Public/index.html
@@ -1565,9 +1565,8 @@
                                                             target="_blank">{{$t('Sector recovery Details 4')}}</a>{{$t('Sector recovery Details 5')}}
                                                     </span>
                                                     </br>
-                                                    <span>
-                                                        {{$t('Sector recovery Details 6')}} <a
-                                                            href="https://github.com/froghub-io/Filecoin-sealer-recover"
+
+                                                    <span> {{$t('Sector recovery Details 6')}} <a href="https://github.com/froghub-io/Filecoin-sealer-recover"
                                                             target="_blank"
                                                             style="font-weight: bold;">{{$t('Sector recovery Details 7')}} </a>{{$t('Sector recovery Details 8')}}
                                                     </span>
