--- a/Public/filfrog.html
+++ b/Public/filfrog.html
@@ -1764,7 +1764,7 @@
                                                 <div class="et_pb_text_inner"><p
                                                         style="display: flex; align-items: center; word-break: break-all;">
                                                     <img width="18"
-                                                         src="https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>froghub@163.com</span></p>
+                                                         src="https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>main@froghub.io</span></p>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_70 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
