--- a/Public/index.html
+++ b/Public/index.html
@@ -114,7 +114,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v14.0.4 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Froghub: Build simple Web3 storage</title>
+    <title>FrogHub: Build simple Web3 storage</title>
     <meta name="keywords" content="Files, Storage Provider, FrogFS.（存储提供商，分布式存储）">
     <meta name="description" content="Froghub: Build simple Web3 storage.（构建简单的Web3存储）"/>
     <meta name="robots" content="index, follow"/>
