--- a/Public/filfrog.html
+++ b/Public/filfrog.html
@@ -114,9 +114,9 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v14.0.4 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>FrogHub: Build simple Web3 storage</title>
+    <title>FrogHub: The developer web3</title>
     <meta name="keywords" content="Files, Storage Provider, FrogFS.（存储提供商，分布式存储）">
-    <meta name="description" content="Froghub: Build simple Web3 storage.（构建简单的Web3存储）"/>
+    <meta name="description" content="Froghub: The developer web3.（服务开发人员的web3平台）"/>
     <meta name="robots" content="index, follow"/>
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
@@ -1181,16 +1181,25 @@
             <div id="et-top-navigation" data-height="155" data-fixed-height="40" style="padding-top: 30px;">
                 <nav id="top-menu-nav">
                     <ul id="top-menu" class="nav et_disable_top_tier">
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
-                                target="_self" rel="noopener" href="./index.html">{{$t('HOME')}}</a></li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
-                                target="_self" rel="noopener" href="./files.html">{{$t('FILES')}}</a></li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
-                                target="_self" rel="noopener" href="./filfrog.html">{{$t('STORAGE PROVIDER')}}</a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
+                            <a style="padding-bottom: 0;">{{$t('PRODUCTS')}}</a>
+                            <ul style="margin-top: 20px; ">
+                                <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
+                                        target="_self" rel="noopener" href="./files.html">{{$t('FILES')}}</a></li>
+                                <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
+                                        target="_self" rel="noopener" href="./filfrog.html">{{$t('STORAGE PROVIDER')}}</a>
+                                <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
+                                        target="_self" rel="noopener" href="./frogfs.html">{{$t('FROGFS')}}</a></li>
+                            </ul>
                         </li>
+                        <!--                        <li class="menu-item menu-item-type-custom menu-item-object-custom "><a-->
+                        <!--                                target="_self" rel="noopener" href="./index.html">{{$t('HOME')}}</a></li>-->
                         <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
-                                target="_self" rel="noopener" href="./frogfs.html">{{$t('FROGFS')}}</a></li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children "
+                                target="_self" rel="noopener" href="./pricing.html">{{$t('PRICING')}}</a></li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom "><a
+                                target="_blank" rel="noopener" href="https://docs.froghub.io">{{$t('DOCS')}}</a>
+                        </li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  menu-item-has-children-language"
                             style="padding: 10px; border: 1px solid rgba(255, 255, 255, 0.3); border-radius: 5px;">
                             <a style="padding-bottom: 0;">{{curLang}}</a>
                             <ul class="sub-menu sub-menu-normal" style="margin-top: 20px; ">
@@ -2028,7 +2037,7 @@
             setup_collapsible_submenus() {
                 const that = this
                 const menu = jq('#mobile_menu')
-                const top_level_link = '#mobile_menu .menu-item-has-children > a'
+                const top_level_link = '#mobile_menu .menu-item-has-children-language > a'
 
                 menu.find('a').each(function () {
                     jq(this).off('click');
