--- a/Public/filfrog.html
+++ b/Public/filfrog.html
@@ -1805,6 +1805,16 @@
                                                         <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
+                                                <li
+                                                        class='et_pb_social_media_follow_network_0 et_pb_social_icon et_pb_social_network_link'>
+                                                    <a
+                                                            href='https://froghub.slack.com/join/shared_invite/zt-1im6nl3t1-BurucWsto5KmYPsFonLrgw#/shared-invite/email'
+                                                            class='icon et_pb_with_border'
+                                                            target="_blank"
+                                                    >
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/slack.png" style="border-radius: 100%;">
+                                                    </a>
+                                                </li>
                                             </ul> <!-- .et_pb_counters -->
                                         </div> <!-- .et_pb_column -->
                                     </div> <!-- .et_pb_row -->
