--- a/Public/index.html
+++ b/Public/index.html
@@ -1701,8 +1701,8 @@
 
                                 <!--底部-->
                                 <div class="et_pb_section et_pb_section_16 et_section_regular">
-                                    <div class="et_pb_row et_pb_row_22 et_pb_gutters1">
-                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_46  et_pb_css_mix_blend_mode_passthrough">
+                                    <div class="et_pb_row et_pb_row_24 et_pb_gutters1">
+                                        <div class="et_pb_column et_pb_column_1_3 et_pb_column_46  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image">
                                                 <span class="et_pb_image_wrap et_pb_image_logo"><img
                                                         src="https://storage.froghub.io/froghub-home-html/assets/logo2x.png"
@@ -1720,10 +1720,7 @@
                                                     {{$t('FrogHub All rights reserved')}}</p></div>
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
-                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_47  et_pb_css_mix_blend_mode_passthrough">
-
-                                        </div> <!-- .et_pb_column -->
-                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_48  et_pb_css_mix_blend_mode_passthrough">
+                                        <div class="et_pb_column et_pb_column_1_6 et_pb_column_48  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_60  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner"><p>{{$t('PRODUCT')}}</p></div>
                                             </div> <!-- .et_pb_text -->
@@ -1735,6 +1732,23 @@
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_63 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner"><p>{{$t('FrogFS')}}</p></div>
+                                            </div> <!-- .et_pb_text -->
+                                            <div class="et_pb_module et_pb_text et_pb_text_65 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
+                                            </div> <!-- .et_pb_text -->
+                                            <div class="et_pb_module et_pb_text et_pb_text_66 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
+                                            </div> <!-- .et_pb_text -->
+                                            <div class="et_pb_module et_pb_text et_pb_text_67 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
+                                            </div> <!-- .et_pb_text -->
+                                        </div> <!-- .et_pb_column -->
+                                        <div class="et_pb_column et_pb_column_1_6 et_pb_column_48  et_pb_css_mix_blend_mode_passthrough">
+                                            <div class="et_pb_module et_pb_text et_pb_text_60  et_pb_text_align_left et_pb_bg_layout_light">
+                                                <div class="et_pb_text_inner"><p>{{$t('QuickLinks')}}</p></div>
+                                            </div> <!-- .et_pb_text -->
+                                            <div class="et_pb_module et_pb_text et_pb_text_64 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
+                                                <div class="et_pb_text_inner"><p>{{$t('privacyNotice')}}</p></div>
+                                            </div> <!-- .et_pb_text -->
+                                            <div class="et_pb_module et_pb_text et_pb_text_65 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
+                                                <div class="et_pb_text_inner"><p>{{$t('teams')}}</p></div>
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_65 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
                                             </div> <!-- .et_pb_text -->
@@ -1815,7 +1829,7 @@
             </div>
             <div class="cookies-tips-content-text">
                 We use cookies to collect anonymous site visitation data to improve the performance of our website.
-<!--                For more info read our <a href="/privacy">Privacy Notice</a>-->
+                For more info read our <a href="./privacy.html">Privacy Notice</a>
             </div>
             <div class="cookies-tips-content-btn">
                 <div class="cookies-tips-content-btn-allow" id="cookies-tips-btn-allow">
@@ -1848,6 +1862,14 @@
     }, {
         "class": "et_pb_text_63",
         "url": "./frogfs.html",
+        "target": "_self"
+    }, {
+        "class": "et_pb_text_64",
+        "url": "./privacy.html",
+        "target": "_self"
+    }, {
+        "class": "et_pb_text_65",
+        "url": "./teams.html",
         "target": "_self"
     }];
 </script>
@@ -5731,6 +5753,11 @@ ul.et_pb_social_media_follow_0 a.icon {
     border: none;
 }
 
+</style>
+<style>
+    body{
+        overflow-x: hidden;
+    }
 </style>
 </body>
 </html>
